srcs/tester/base/vector/capacity/log.txt
./base/vector/capacity/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::vector<int> myvector;
 ^
./base/vector/capacity/patched.cpp:10:28: error: use of undeclared identifier 'myvector'
 for (int i=0; i<100; i++) myvector.push_back(i);
                           ^
./base/vector/capacity/patched.cpp:12:33: error: use of undeclared identifier 'myvector'
 std::cout << "size: " << (int) myvector.size() << '\n';
                                ^
./base/vector/capacity/patched.cpp:13:37: error: use of undeclared identifier 'myvector'
 std::cout << "capacity: " << (int) myvector.capacity() << '\n';
                                    ^
4 errors generated.
